@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.55 2001/05/22 00:22:41 hobbs Exp $
+ * RCS: @(#) $Id: tk.h,v 1.56 2001/08/08 18:41:10 dgp Exp $
  */
 
 #ifndef _TK
@@ -48,10 +48,10 @@ extern "C" {
 #define TK_MAJOR_VERSION   8
 #define TK_MINOR_VERSION   4
 #define TK_RELEASE_LEVEL   TCL_ALPHA_RELEASE
-#define TK_RELEASE_SERIAL  3
+#define TK_RELEASE_SERIAL  4
 
 #define TK_VERSION	"8.4"
-#define TK_PATCH_LEVEL	"8.4a3"
+#define TK_PATCH_LEVEL	"8.4a4"
 
 /*
  * The following definitions set up the proper options for Macintosh
