@@ -1,3 +1,15 @@
+2001-08-08  Don Porter <dgp@users.sourceforge.net>
+
+        * README:
+        * generic/tk.h:
+        * unix/configure:
+        * unix/configure.in:
+        * unix/tk.spec:
+        * win/configure:
+        * win/configure.in: Bumped up patchlevel to 8.4a4 to distinguish
+        CVS snapshots from the 8.4a3 release.  This does not necessarily
+        mean there will be an 8.4a4 release.  [Bug 448938].
+
 2001-08-07  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* unix/Makefile.in (dist): added {unix,win}/tcl.m4 and
